# calcgraph

./: .gitignore  CMakeLists.txt  README.md  calcgraph.pc.in  doxygen.conf.in
example/: CMakeLists.txt  example.cpp
include/: calcgraph.h
test/: CMakeLists.txt
